--- a/new2 .html
+++ b/new2 .html
@@ -7,5 +7,6 @@
 </head>
 <body>
 <h1>my new2</h1>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat doloribus reiciendis autem!</p>
 </body>
 </html>
